Add demo with examples.